--- a/finale.ipynb
+++ b/finale.ipynb
@@ -29,8 +29,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
@@ -82,8 +82,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package brown to /root/nltk_data...\n",
             "[nltk_data]   Package brown is already up-to-date!\n",
@@ -134,8 +134,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2023-07-20 09:34:10--  https://raw.githubusercontent.com/HLT-Ghisolfi-Leuzzi-Testa/WASSA-2023/main/utils.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.111.133, ...\n",
@@ -196,8 +196,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2023-07-20 08:21:36--  https://raw.githubusercontent.com/HLT-Ghisolfi-Leuzzi-Testa/WASSA-2023/main/datasets/EMO23_lexicon_per_word_.json\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
@@ -278,14 +278,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<module 'utils' from '/content/utils.py'>"
             ]
           },
+          "execution_count": 72,
           "metadata": {},
-          "execution_count": 72
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -338,8 +338,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "======= CUDA Available =======\n"
           ]
@@ -562,7 +562,7 @@
         "num_local_features = 0\n",
         "if emo_count_local:\n",
         "  local_features_names.append('emotions')\n",
-        "  num_local_features += len(EMOTIONS_NAMES)\n",
+        "  num_local_features += len(EMOTIONS_LEX)\n",
         "if empathy_count_local:\n",
         "  local_features_names.append('empathy')\n",
         "  num_local_features += 1\n",
@@ -721,8 +721,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "mkdir: cannot create directory ‘EMO_mask’: File exists\n",
             "\n",
@@ -1013,6 +1013,9 @@
       "cell_type": "code",
       "execution_count": 86,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "execution": {
           "iopub.execute_input": "2023-07-11T19:10:06.006808Z",
           "iopub.status.busy": "2023-07-11T19:10:06.006358Z",
@@ -1021,16 +1024,13 @@
           "shell.execute_reply.started": "2023-07-11T19:10:06.006776Z"
         },
         "id": "6LKqRnKdsJdu",
-        "trusted": true,
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "dfd19d2a-60e0-4470-ce70-be24bd4c2ebb"
+        "outputId": "dfd19d2a-60e0-4470-ce70-be24bd4c2ebb",
+        "trusted": true
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/sklearn/preprocessing/_label.py:895: UserWarning: unknown class(es) ['neutral'] will be ignored\n",
             "  warnings.warn(\n"
@@ -1468,14 +1468,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "RobertaTokenizerFast(name_or_path='SamLowe/roberta-base-go_emotions', vocab_size=50265, model_max_length=512, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': '<s>', 'eos_token': '</s>', 'unk_token': '<unk>', 'sep_token': '</s>', 'pad_token': '<pad>', 'cls_token': '<s>', 'mask_token': AddedToken(\"<mask>\", rstrip=False, lstrip=True, single_word=False, normalized=False)}, clean_up_tokenization_spaces=True)"
             ]
           },
+          "execution_count": 94,
           "metadata": {},
-          "execution_count": 94
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1503,8 +1503,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Some weights of CustomSequenceClassification were not initialized from the model checkpoint at SamLowe/roberta-base-go_emotions and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
             "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
@@ -1517,7 +1517,6 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "CustomSequenceClassification(\n",
@@ -1571,8 +1570,9 @@
               ")"
             ]
           },
+          "execution_count": 95,
           "metadata": {},
-          "execution_count": 95
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1841,8 +1841,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/transformers/optimization.py:411: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
             "  warnings.warn(\n",
@@ -1850,11 +1850,7 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "    <div>\n",
@@ -1994,13 +1990,17 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table><p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
             "  _warn_prf(average, modifier, msg_start, len(result))\n",
@@ -2195,12 +2195,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "irkOTNSGf8WD"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
@@ -2303,6 +2303,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "MbmgNfbRoz-N"
+      },
+      "outputs": [],
       "source": [
         "def add_prompt_test(df, TASK, EMP_levels=None):\n",
         "    if TASK == 'EMP':\n",
@@ -2320,12 +2325,7 @@
         "            emotions_str = 'neutral'\n",
         "            df.at[idx, 'prompt_emo'] = f'This essays exprsses {emotions_str}'\n",
         "    return df\n"
-      ],
-      "metadata": {
-        "id": "MbmgNfbRoz-N"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2426,15 +2426,15 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "path_predictions = \"./preds\"\n",
-        "write_predictions(predict_emotions(predictions, neutral_zero), path_predictions)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "v-0P0BWKGxy1"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "path_predictions = \"./preds\"\n",
+        "write_predictions(predict_emotions(predictions, neutral_zero), path_predictions)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2506,14 +2506,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "best_metric_path = f\"/content/{config.get('model_name')}/checkpoint-900\""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "FarwF73-gWf3"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "best_metric_path = f\"/content/{config.get('model_name')}/checkpoint-900\""
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2540,14 +2540,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "path_tosave"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "EYICRkXSgpjx"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "path_tosave"
+      ]
     },
     {
       "cell_type": "code",
