--- a/EMP_prompt_from_predictions.ipynb
+++ b/EMP_prompt_from_predictions.ipynb
@@ -2,12 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRIALS = 3\n",
+    "\n",
+    "empathy = []\n",
+    "distress = []\n",
+    "\n",
+    "for trial in range(TRIALS):\n",
+    "    path = f\"./WASSA22_emp_pred/predictions_EMP_pred_prompt{trial+1}.tsv\"\n",
+    "    data = pd.read_csv(path, sep=\"\\t\", names=['empathy', 'distress'])\n",
+    "    empathy.append(data['empathy'])\n",
+    "    distress.append(data['distress'])\n",
+    "\n",
+    "empathy = np.mean(empathy, axis=0)\n",
+    "distress = np.mean(distress, axis=0)\n",
+    "\n",
+    "final_predictions = pd.DataFrame({'empathy': empathy, 'distress': distress})\n",
+    "final_predictions.to_csv('./WASSA22_emp_pred/predictions_EMP.tsv', sep=\"\\t\", index=False, header=False)"
    ]
   },
   {
