--- a/finale.ipynb
+++ b/finale.ipynb
@@ -995,7 +995,7 @@
         "  dev_df = add_emp_dist_levels(dev_df)\n",
         "  dev_df = add_prompt_truth(dev_df, TASK, EMP_levels)\n",
         "if TASK==\"EMO\":\n",
-        "  train_df = add_prompt(train_df, TASK)\n",
+        "  train_df = add_prompt_truth(train_df, TASK)\n",
         "  val_df = add_prompt_truth(val_df, TASK)\n",
         "  dev_df = add_prompt_truth(dev_df, TASK)"
       ]
