--- a/EMP_prompt_from_predictions.ipynb
+++ b/EMP_prompt_from_predictions.ipynb
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRIALS = 3\n",
+    "TRIALS = 2\n",
     "\n",
     "empathy = []\n",
     "distress = []\n",
     "\n",
     "for trial in range(TRIALS):\n",
-    "    path = f\"./WASSA22_emp_pred/predictions_EMP_pred_prompt{trial+1}.tsv\"\n",
+    "    path = f\"./WASSA22_emp_pred/predictions{trial+1}_real.tsv\"\n",
     "    data = pd.read_csv(path, sep=\"\\t\", names=['empathy', 'distress'])\n",
     "    empathy.append(data['empathy'])\n",
     "    distress.append(data['distress'])\n",
