preprocessing, gitignore update, prompt emp

--- a/prompt_from_EMP_predictions.ipynb
+++ b/prompt_from_EMP_predictions.ipynb
@@ -11,30 +11,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TRIALS = 2\n",
-    "\n",
-    "empathy = []\n",
-    "distress = []\n",
-    "\n",
-    "for trial in range(TRIALS):\n",
-    "    path = f\"./WASSA22_emp_pred/predictions{trial+1}_real.tsv\"\n",
-    "    data = pd.read_csv(path, sep=\"\\t\", names=['empathy', 'distress'])\n",
-    "    empathy.append(data['empathy'])\n",
-    "    distress.append(data['distress'])\n",
-    "\n",
-    "empathy = np.mean(empathy, axis=0)\n",
-    "distress = np.mean(distress, axis=0)\n",
-    "\n",
-    "final_predictions = pd.DataFrame({'empathy': empathy, 'distress': distress})\n",
-    "final_predictions.to_csv('./WASSA22_emp_pred/predictions_EMP.tsv', sep=\"\\t\", index=False, header=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,7 +36,7 @@
     "distress = []\n",
     "\n",
     "for trial in range(TRIALS):\n",
-    "    path = f\"./WASSA22_emp_pred/predictions_EMP_trial{trial+1}.tsv\"\n",
+    "    path = f\"./predictions_EMP_trial{trial+1}.tsv\"\n",
     "    data = pd.read_csv(path, sep=\"\\t\", names=['empathy', 'distress'])\n",
     "    empathy.append(data['empathy'])\n",
     "    distress.append(data['distress'])\n",
@@ -69,7 +45,7 @@
     "distress = np.mean(distress, axis=0)\n",
     "\n",
     "mean_pred_test = pd.DataFrame({'empathy': empathy, 'distress': distress})\n",
-    "mean_pred_test.to_csv('./WASSA22_emp_pred/predictions_EMP_mean.tsv', sep=\"\\t\", index=False, header=False)\n"
+    "mean_pred_test.to_csv('./predictions_EMP_mean.tsv', sep=\"\\t\", index=False, header=False)\n"
    ]
   },
   {
@@ -186,53 +162,8 @@
     }
    ],
    "source": [
+    "# predictions mean from 3 trials, model trained on wassa 2022 training data\n",
     "mean_pred_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"empathy23 = []\n",
-    "distress23 = []\n",
-    "\n",
-    "for trial in range(TRIALS):\n",
-    "    path23 = f\"./WASSA22_emp_pred/predictions23_trial{trial+1}.tsv\"\n",
-    "    data23 = pd.read_csv(path, sep=\"\\t\", names=['empathy', 'distress'])\n",
-    "    empathy23.append(data23['empathy'])\n",
-    "    distress23.append(data23['distress'])\n",
-    "\n",
-    "empathy23 = np.mean(empathy23, axis=0)\n",
-    "distress23 = np.mean(distress23, axis=0)\n",
-    "\n",
-    "mean_pred23 = pd.DataFrame({'empathy': empathy, 'distress': distress})\n",
-    "mean_pred23.to_csv('./WASSA22_emp_pred/predictions23_essay_level.tsv', sep=\"\\t\", index=False)\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'path' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m path23 \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m./WASSA22_emp_pred/predictions23.tsv\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> 2\u001b[0m mean_pred23 \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(path, sep\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m\"\u001b[39m, names\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39mempathy\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mdistress\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m      3\u001b[0m mean_pred23\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'path' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "path23 = f\"./WASSA22_emp_pred/predictions23.tsv\"\n",
-    "mean_pred23 = pd.read_csv(path, sep=\"\\t\", names=['empathy', 'distress'])\n",
-    "mean_pred23"
    ]
   },
   {
@@ -705,6 +636,7 @@
     }
    ],
    "source": [
+    "# generate prompt for wassa 2023 test set from predictions on previously model\n",
     "test_df"
    ]
   },
@@ -714,27 +646,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df.to_csv('./WASSA22_emp_pred/WASSA23_essay_level_test_gold_prompt.tsv', sep='\\t', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df = pd.read_csv('./datasets/WASSA23_essay_level_preproc.tsv', sep='\\t')\n",
-    "train_df = get_emp_levels(train_df, mean_pred23['empathy'], mean_pred23['distress'])\n",
-    "train_df = add_gold_prompt(train_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df.to_csv('./WASSA22_emp_pred/WASSA23_essay_level_gold_prompt.tsv', sep='\\t', index=False)"
+    "test_df.to_csv('./WASSA23_essay_level_test_gold_prompt.tsv', sep='\\t', index=False)"
    ]
   }
  ],
