wassa custom cleaning

--- a/wassa_custom.ipynb
+++ b/wassa_custom.ipynb
@@ -650,13 +650,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "CgMIYk-HyEbS"
-      },
-      "source": []
-    },
-    {
       "cell_type": "code",
       "execution_count": 82,
       "metadata": {
@@ -1164,6 +1157,7 @@
         "EMP_lexicon_dev_dict = None\n",
         "EMO_lexicon_test_dict = None\n",
         "EMP_lexicon_test_dict = None\n",
+        "\n",
         "if config.get('local_features_names') is not None:\n",
         "  if 'emotions' in config.get('local_features_names'):\n",
         "    with open(\"/content/EMO23_lexicon_per_word_.json\") as json_file:\n",
@@ -1210,25 +1204,8 @@
         "    inverse_n_samples = 1 / np.sum(y, axis=0)\n",
         "    sum_inverses = sum(inverse_n_samples)\n",
         "    weights_train = inverse_n_samples / sum_inverses\n",
-        "  return torch.cuda.FloatTensor(weights_train)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 91,
-      "metadata": {
-        "execution": {
-          "iopub.execute_input": "2023-07-11T19:11:17.257384Z",
-          "iopub.status.busy": "2023-07-11T19:11:17.255861Z",
-          "iopub.status.idle": "2023-07-11T19:11:22.360433Z",
-          "shell.execute_reply": "2023-07-11T19:11:22.359379Z",
-          "shell.execute_reply.started": "2023-07-11T19:11:17.257351Z"
-        },
-        "id": "wVh3_jCFzmK7",
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
+        "  return torch.cuda.FloatTensor(weights_train)\n",
+        "\n",
         "loss_weights_train = None\n",
         "if model_config.get('weighted_loss')!='None':\n",
         "  loss_weights_train = get_loss_weights(y_train, model_config.get('weighted_loss'))"
@@ -1582,19 +1559,19 @@
         "  problem_type = \"regression\"\n",
         "\n",
         "model = CustomSequenceClassification.from_pretrained(\n",
-        "  config.get('model_name'),\n",
-        "  problem_type = problem_type,\n",
-        "  classifier_dropout = config.get('dropout'),\n",
-        "  model_class = config.get('model_class_string'),\n",
-        "  num_labels=config.get('num_labels'),\n",
-        "  dim_extra_features = config.get('dim_extra_features'),\n",
-        "  local_features_names = config.get('local_features_names'),\n",
-        "  n_last_cls = config.get('n_last_cls'),\n",
-        "  mean_last_cls = config.get('mean_last_cls'),\n",
-        "  concat_local_features = config.get('concat_local_features'),\n",
-        "  loss_weights = loss_weights_train,\n",
-        "  ignore_mismatched_sizes=True\n",
-        "  )\n",
+        "                                                    config.get('model_name'),\n",
+        "                                                    problem_type = problem_type,\n",
+        "                                                    classifier_dropout = config.get('dropout'),\n",
+        "                                                    model_class = config.get('model_class_string'),\n",
+        "                                                    num_labels=config.get('num_labels'),\n",
+        "                                                    dim_extra_features = config.get('dim_extra_features'),\n",
+        "                                                    local_features_names = config.get('local_features_names'),\n",
+        "                                                    n_last_cls = config.get('n_last_cls'),\n",
+        "                                                    mean_last_cls = config.get('mean_last_cls'),\n",
+        "                                                    concat_local_features = config.get('concat_local_features'),\n",
+        "                                                    loss_weights = loss_weights_train,\n",
+        "                                                    ignore_mismatched_sizes=True\n",
+        "                                                  )\n",
         "model"
       ]
     },
@@ -1663,6 +1640,7 @@
         "    local_empathy = config.get('empathy_count_local'),\n",
         "    local_distress = config.get('distress_count_local')\n",
         "    )\n",
+        "\n",
         "dev_set = WASSADataset(\n",
         "    tokenizer=tokenizer,\n",
         "    essay = dev_df.essay,\n",
@@ -2197,15 +2175,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "irkOTNSGf8WD"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "DXgFzu32_RBo"
       },
       "outputs": [],
@@ -2302,147 +2271,19 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "MbmgNfbRoz-N"
-      },
-      "outputs": [],
-      "source": [
-        "def add_prompt_test(df, TASK, EMP_levels=None):\n",
-        "    if TASK == 'EMP':\n",
-        "        for idx, _ in df.iterrows():\n",
-        "            if EMP_levels == \"3\":\n",
-        "                emp_level = df['true_empathy_level_3'].loc[idx]\n",
-        "                dist_level = df['true_distress_level_3'].loc[idx]\n",
-        "                df.at[idx, 'prompt_emp'] = f'This essay expresses {emp_level} level of empathy and a {dist_level} level of distress'\n",
-        "            else:\n",
-        "                emp_level = df['true_empathy_level_5'].loc[idx]\n",
-        "                dist_level = df['true_distress_level_5'].loc[idx]\n",
-        "                df.at[idx, 'prompt_emp'] = f'This essay expresses {emp_level} level of empathy and a {dist_level} level of distress'\n",
-        "    else:\n",
-        "        for idx, row in df.iterrows():\n",
-        "            emotions_str = 'neutral'\n",
-        "            df.at[idx, 'prompt_emo'] = f'This essays exprsses {emotions_str}'\n",
-        "    return df\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "LmnuHr97ziO1"
-      },
-      "source": [
-        "## Inference on test set"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "yjZO7JifwELj"
-      },
-      "outputs": [],
-      "source": [
-        "TEST_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_test_preproc.tsv\"\n",
-        "test_df = pd.read_csv(TEST_DATA, sep='\\t')\n",
-        "test_df = add_prompt_test(test_df, \"EMO\")\n",
-        "\n",
-        "num_missing_features = 0\n",
-        "if config['gold_emotions']:\n",
-        "    num_missing_features += 8\n",
-        "if config['gold_empathy']:\n",
-        "    num_missing_features += 1\n",
-        "if config['gold_distress']:\n",
-        "    num_missing_features += 1\n",
-        "\n",
-        "global_features = standard_scalar_features(np.array(test_df[config.get('global_features_names')]))\n",
-        "if num_missing_features > 0:\n",
-        "    global_features = np.concatenate((global_features, np.zeros((100, num_missing_features), int)), axis=1)\n",
-        "\n",
-        "test_set = WASSADataset(tokenizer=tokenizer,\n",
-        "                    essay=test_df.essay,\n",
-        "                    essay_id = test_df.essay_id,\n",
-        "                    targets=None,\n",
-        "                    prompt_after_SEP=np.array(test_df['prompt_bio']),\n",
-        "                    global_features = global_features,\n",
-        "                    prompt_inlcusion_prob=0\n",
-        "                )\n",
-        "\n",
-        "outs = trainer.predict(test_set)\n",
-        "predictions = outs.predictions[0]\n",
-        "\n",
-        "path_predictions = f\"{path_tosave}/predictions_{TASK}.tsv\"\n",
-        "write_predictions(predictions, path_predictions)\n",
-        "\n",
-        "write_predictions(predict_emotions(predictions, neutral_zero),'./EMO_preds.tsv')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "wNKkSwJD7rFv"
-      },
-      "outputs": [],
-      "source": [
-        "# TODO:\n",
-        "\n",
-        "if TASK==\"EMP\" and include_predicted_prompt:\n",
-        "    test_df = get_emp_levels(test_df, predictions[:,0], predictions[:,1])\n",
-        "\n",
-        "    for idx, row in test_df.iterrows():\n",
-        "        _, text_prompt_emp, _ = generate_prompt(\n",
-        "                                    row['essay'],\n",
-        "                                    row['article_id'],\n",
-        "                                    row['gender'],\n",
-        "                                    row['education'],\n",
-        "                                    row['race'],\n",
-        "                                    row['age'],\n",
-        "                                    row['income'],\n",
-        "                                    row['empathy_level'],\n",
-        "                                    row['distress_level']\n",
-        "                                    )\n",
-        "        essay = row['essay']\n",
-        "        test_df.at[idx, \"essay\"] = essay + \" \" + text_prompt_emp\n",
-        "\n",
-        "\n",
-        "    test_set = WASSADataset(tokenizer=tokenizer,\n",
-        "                        essay=test_df.essay,\n",
-        "                        essay_id = test_df.essay_id,\n",
-        "                        targets=None,\n",
-        "                        prompt_after_SEP=np.array(test_df['prompt_bio']),\n",
-        "                        global_features = global_features,\n",
-        "                        prompt_inlcusion_prob=0\n",
-        "                    )\n",
-        "\n",
-        "\n",
-        "    outs = trainer.predict(test_set)\n",
-        "    predictions = outs.predictions[0]\n",
-        "\n",
-        "    path_predictions = f\"{path_tosave}/predictions_{TASK}_pred_prompt.tsv\"\n",
-        "    write_predictions(predictions, path_predictions)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "v-0P0BWKGxy1"
-      },
-      "outputs": [],
-      "source": [
-        "path_predictions = \"./preds\"\n",
-        "write_predictions(predict_emotions(predictions, neutral_zero), path_predictions)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "9pkHv9w4tM1F"
       },
       "source": [
-        "## Inference"
+        "## Checkpoints Evaluation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Try a different checkpoint other than the one with the best metrics"
       ]
     },
     {
@@ -2453,8 +2294,6 @@
       },
       "outputs": [],
       "source": [
-        "# TODO:\n",
-        "\n",
         "def load_checkpoint_and_compute_metrics(checkpoint_path, test_set, neutral_zero):\n",
         "\n",
         "  model = CustomSequenceClassification.from_pretrained(checkpoint_path,\n",
@@ -2500,19 +2339,8 @@
       },
       "outputs": [],
       "source": [
-        "best_metric_path = f\"/content/{config.get('model_name')}/checkpoint-900\"\n",
+        "other_model_path = f\"/content/{config.get('model_name')}/checkpoint-{best_steps}\"\n",
         "load_checkpoint_and_compute_metrics(best_metric_path, dev_set, neutral_zero)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "FarwF73-gWf3"
-      },
-      "outputs": [],
-      "source": [
-        "best_metric_path = f\"/content/{config.get('model_name')}/checkpoint-900\""
       ]
     },
     {
@@ -2542,23 +2370,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "EYICRkXSgpjx"
-      },
-      "outputs": [],
-      "source": [
-        "path_tosave"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "kBnyZt80nxW0"
       },
       "outputs": [],
       "source": [
         "# move the checkpoint with best metric in the folder with model id\n",
-        "!mv $best_metric_path /content/$path_tosave"
+        "!mv $other_model_path /content/$path_tosave"
       ]
     },
     {
