--- a/wassa_custom.ipynb
+++ b/wassa_custom.ipynb
@@ -2132,35 +2132,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "execution": {
-          "iopub.execute_input": "2023-07-11T19:32:52.626228Z",
-          "iopub.status.busy": "2023-07-11T19:32:52.625699Z",
-          "iopub.status.idle": "2023-07-11T19:32:52.641902Z",
-          "shell.execute_reply": "2023-07-11T19:32:52.638400Z",
-          "shell.execute_reply.started": "2023-07-11T19:32:52.626186Z"
-        },
-        "id": "19G80dVoH3HZ",
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
-        "def predict_emotions(results, neutral_zero):\n",
-        "\n",
-        "  binarized_predictions = np.where(results >= 0.5, 1, 0)\n",
-        "\n",
-        "  if not neutral_zero:\n",
-        "    for i, bin_pred in enumerate(binarized_predictions):\n",
-        "      if np.all(bin_pred==0):\n",
-        "        binarized_predictions[i][np.argmax(results[i])] = 1\n",
-        "\n",
-        "  predicted_emotions = label_encoder.decode(binarized_predictions)\n",
-        "  return predicted_emotions\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "4WIAU6a7Mox4"
       },
       "outputs": [],
@@ -2180,7 +2151,7 @@
       "source": [
         "if TASK == \"EMO\":\n",
         "  golds = label_encoder.decode(outs.label_ids)\n",
-        "  predictions = predict_emotions(outs.predictions[0], neutral_zero)\n",
+        "  predictions = predict_emotions(label_encoder, outs.predictions[0], neutral_zero)\n",
         "if TASK == \"EMP\":\n",
         "  golds = outs.label_ids\n",
         "  predictions = outs.predictions[0]"
@@ -2314,7 +2285,7 @@
         "\n",
         "  if TASK == \"EMO\":\n",
         "    golds = label_encoder.decode(outs.label_ids)\n",
-        "    predictions = predict_emotions(outs.predictions[0], neutral_zero)\n",
+        "    predictions = predict_emotions(label_encoder, outs.predictions[0], neutral_zero)\n",
         "  if TASK == \"EMP\":\n",
         "    golds = outs.label_ids\n",
         "    predictions = outs.predictions[0]\n",
@@ -2339,7 +2310,7 @@
       "outputs": [],
       "source": [
         "other_model_path = f\"/content/{config.get('model_name')}/checkpoint-{best_steps}\"\n",
-        "load_checkpoint_and_compute_metrics(best_metric_path, dev_set, neutral_zero)"
+        "load_checkpoint_and_compute_metrics(other_model_path, dev_set, neutral_zero)"
       ]
     },
     {
