--- a/wassa_custom.ipynb
+++ b/wassa_custom.ipynb
@@ -2364,7 +2364,7 @@
       "outputs": [],
       "source": [
         "# move the results to personal drive\n",
-        "!mv /content/checkpoint /content/drive/MyDrive/hlt"
+        "!mv /content/$path_tosave /content/drive/MyDrive/hlt"
       ]
     }
   ],
