--- a/wassa_test.ipynb
+++ b/wassa_test.ipynb
@@ -364,6 +364,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "CJpUGgCa2MZt"
+      },
+      "outputs": [],
       "source": [
         "#zip unzip\n",
         "best_model_path = \"\"\n",
@@ -374,12 +379,7 @@
         "print(\"\\nCONFIGURATION\")\n",
         "for k,v in config.items():\n",
         "  print(f\"{k}: {v}\")"
-      ],
-      "metadata": {
-        "id": "CJpUGgCa2MZt"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -584,7 +584,7 @@
       "source": [
         "TEST_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_test_preproc.tsv\"\n",
         "\n",
-        "test_df = pd.read_csv(TRAIN_DATA, sep='\\t')\n",
+        "test_df = pd.read_csv(TEST_DATA, sep='\\t')\n",
         "\n",
         "if TASK==\"EMP\":\n",
         "  train_df = add_emp_dist_levels(train_df)\n",
@@ -1207,6 +1207,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "UsAa9g5j5qKJ"
+      },
+      "outputs": [],
       "source": [
         "#TODO: if??\n",
         "\n",
@@ -1223,12 +1228,7 @@
         "global_features = standard_scalar_features(np.array(test_df[config.get('global_features_names')]))\n",
         "if num_missing_features > 0:\n",
         "    global_features = np.concatenate((global_features, np.zeros((100, num_missing_features), int)), axis=1)"
-      ],
-      "metadata": {
-        "id": "UsAa9g5j5qKJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -1255,8 +1255,8 @@
         "                        targets = None,\n",
         "                        global_features = global_features_test,\n",
         "                        prompt_inlcusion_prob = 1,\n",
-        "                        EMO_lexicon = EMO_lexicon_train_dict,\n",
-        "                        EMP_lexicon = EMP_lexicon_train_dict,\n",
+        "                        EMO_lexicon = EMO_lexicon_test_dict,\n",
+        "                        EMP_lexicon = EMP_lexicon_test_dict,\n",
         "                        local_emotions = config.get('emo_count_local'),\n",
         "                        local_empathy = config.get('empathy_count_local'),\n",
         "                        local_distress = config.get('distress_count_local')\n",
@@ -1265,15 +1265,15 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "trainer = Trainer(model=model)\n",
-        "outs = trainer.predict(test_set)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "abCztdbQ45F-"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "trainer = Trainer(model=model)\n",
+        "outs = trainer.predict(test_set)"
+      ]
     },
     {
       "cell_type": "code",
@@ -1324,6 +1324,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "WX2a-YLE6pWz"
+      },
+      "outputs": [],
       "source": [
         "#@title Predict\n",
         "\n",
@@ -1343,13 +1349,7 @@
         "  prediction = outputs.predictions[0]\n",
         "\n",
         "print(f\"Predicted: {prediction}\")"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "WX2a-YLE6pWz"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
